added new projects and some style updates

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <p>Discoliam (Liam Edward Richardson to his parents) is a Interactive Web Developer based in Bristol, UK. He builds award winning websites and tools, rides bicycles, enjoys live music and eats falafel.</p>
       </article>
 
-      <h2 class="projects-title">Projects</h2>
+      <h2 class="projects-title">Selected Works</h2>
 
       <div class="projects-wrap">
 
@@ -78,13 +78,25 @@
 
         <a href="http://2016.bathruby.uk/" title="Aperyer" class="block large bath-ruby">
           <span class="title">Bath Ruby 2016</span>
-          <span class="desc">Website Build for Bath Ruby 2016</span>
+          <span class="desc">Website Build for the top Ruby Conference</span>
+          <div class="overlay"></div>
+        </a>
+
+        <a href="https://richard-windsor.co.uk/" title="Richard Windsor" class="block large richard-windsor">
+          <span class="title">Richard Windsor</span>
+          <span class="desc">Website Build for Bristols Best Graphic Designer</span>
+          <div class="overlay"></div>
+        </a>
+
+        <a href="http://cosyclub.co.uk" title="Cosy Club" class="block large cosy-club">
+          <span class="title">Cosy Club</span>
+          <span class="desc">Website Build National Restaurant Chain</span>
           <div class="overlay"></div>
         </a>
 
         <a href="http://www.closedsundays.co.uk" title="Closed Sundays" class="block large closed-sundays">
           <span class="title">Closed Sundays</span>
-          <span class="desc">Responsive Website Build for Closed Sundays</span>
+          <span class="desc">Responsive Website Build for Retail Design Duo</span>
           <div class="overlay"></div>
         </a>
 
@@ -94,6 +106,11 @@
           <div class="overlay"></div>
         </a>
 
+      </div>
+
+      <h2 class="projects-title">Experiments</h2>
+
+      <div class="projects-wrap">
         <a href="http://brizzle-ipsum.herokuapp.com" title="Brizzle Ipsum" class="block large brizzle-ipsum">
           <span class="title">Brizzle Ipsum</span>
           <span class="desc">Brizzle Ipsum Generator (w/ Craig Coles)</span>
@@ -105,8 +122,8 @@
           <span class="desc">getUserMedia experiment (w/ Craig Coles)</span>
           <div class="overlay"></div>
         </a>
-
       </div>
+
 
       <h2>Previous Clients</h2>
 
@@ -114,42 +131,34 @@
 
         <article class="block medium puffin">
           <span>Puffin</span>
-          <img src="assets/blank.png" class="overlay" alt="blank" />
         </article>
 
         <article class="block medium audi">
           <span>Audi</span>
-          <img src="assets/blank.png" class="overlay" alt="blank" />
         </article>
 
         <article class="block medium sky">
           <span>Sky</span>
-          <img src="assets/blank.png" class="overlay" alt="blank" />
         </article>
 
         <article class="block medium good-energy">
           <span>Good Energy</span>
-          <img src="assets/blank.png" class="overlay" alt="blank" />
         </article>
 
         <article class="block medium transparency">
           <span>Transparency International</span>
-          <img src="assets/blank.png" class="overlay" alt="blank" />
         </article>
 
         <article class="block medium bdh">
           <span>BDH</span>
-          <img src="assets/blank.png" class="overlay" alt="blank" />
         </article>
 
         <article class="block medium work-the-world">
           <span>Work The World</span>
-          <img src="assets/blank.png" class="overlay" alt="blank" />
         </article>
 
         <article class="block medium rau">
           <span>Royal Agricultural University</span>
-          <img src="assets/blank.png" class="overlay" alt="blank" />
         </article>
 
       </div>
@@ -168,14 +177,14 @@
       </section>
 
       <nav class="social">
-        <a href="http://twitter.com/discoliam" class="block small twitter" title="Twitter"><span>Twitter</span><img src="assets/blank.png" class="overlay" alt="blank" /></a>
-        <a href="https://github.com/discoliam" class="block small github" title="Github"><span>Github</span><img src="assets/blank.png" class="overlay" alt="blank" /></a>
-        <a href="http://instagram.com/discoliam" class="block small instagram" title="Instergram"><span>Instagram</span><img src="assets/blank.png" class="overlay" alt="blank" /></a>
-        <a href="http://www.last.fm/user/discoliam" class="block small lastfm" title="Last.fm"><span>Last.fm</span><img src="assets/blank.png" class="overlay" alt="blank" /></a>
-        <a href="http://www.facebook.com/liamrichardson" class="block small facebook" title="Facebook"><span>Facebook</span><img src="assets/blank.png" class="overlay" alt="blank" /></a>
-        <a href="http://www.linkedin.com/in/liamrichardson" class="block small linkedin" title="LinkedIn"><span>LinkedIn</span><img src="assets/blank.png" class="overlay" alt="blank" /></a>
-        <a href="skype:discoliam?call" class="block small skype" title="Skype"><span>Skype</span><img src="assets/blank.png" class="overlay" alt="blank" /></a>
-        <a href="http://stackoverflow.com/users/3324005/discoliam" class="block small stackoverflow" title="Stack Ovrflow"><span>Stack Overflow</span><img src="assets/blank.png" class="overlay" alt="blank" /></a>
+        <a href="http://twitter.com/discoliam" class="block small twitter" title="Twitter"><span>Twitter</span></a>
+        <a href="https://github.com/discoliam" class="block small github" title="Github"><span>Github</span></a>
+        <a href="http://instagram.com/discoliam" class="block small instagram" title="Instergram"><span>Instagram</span></a>
+        <a href="http://www.last.fm/user/discoliam" class="block small lastfm" title="Last.fm"><span>Last.fm</span></a>
+        <a href="http://www.facebook.com/liamrichardson" class="block small facebook" title="Facebook"><span>Facebook</span></a>
+        <a href="http://www.linkedin.com/in/liamrichardson" class="block small linkedin" title="LinkedIn"><span>LinkedIn</span></a>
+        <a href="skype:discoliam?call" class="block small skype" title="Skype"><span>Skype</span></a>
+        <a href="http://stackoverflow.com/users/3324005/discoliam" class="block small stackoverflow" title="Stack Ovrflow"></a>
       </nav>
 
       <footer role="contentinfo">
