--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="main-content" role="main">
   
       <article class="block text bio">
-        <a href="mailto:discoliam@gmail.com" class="email">discoliam@gmail.com</a>
+        <a href="mailto:hello@discoliam.com" class="email">hello@discoliam.com</a>
         <p>Discoliam (Liam Edward Richardson to his parents) is a Interactive Web Developer based in Bristol, UK. He builds award winning websites and tools, rides bicycles, enjoys live music and eats falafel.</p>
       </article>
 
@@ -172,14 +172,14 @@
         </p>
         <p class="contact-deets-two">
           (+44) 0789 6411 112<br />
-          <a href="mailto:discoliam@gmail.com" class="email">discoliam@gmail.com</a>
+          <a href="hello@discoliam.com" class="email">hello@discoliam.com</a>
         </p>
       </section>
 
       <nav class="social">
         <a href="http://twitter.com/discoliam" class="block small twitter" title="Twitter"><span>Twitter</span></a>
         <a href="https://github.com/discoliam" class="block small github" title="Github"><span>Github</span></a>
-        <a href="http://instagram.com/discoliam" class="block small instagram" title="Instergram"><span>Instagram</span></a>
+        <a href="http://instagram.com/discoliam" class="block small instagram" title="Instagram"><span>Instagram</span></a>
         <a href="http://www.last.fm/user/discoliam" class="block small lastfm" title="Last.fm"><span>Last.fm</span></a>
         <a href="http://www.facebook.com/liamrichardson" class="block small facebook" title="Facebook"><span>Facebook</span></a>
         <a href="http://www.linkedin.com/in/liamrichardson" class="block small linkedin" title="LinkedIn"><span>LinkedIn</span></a>
@@ -189,7 +189,7 @@
 
       <footer role="contentinfo">
         <p class="copy">
-          <span>© 2006 – 2016 Liam Richardson. All rights reserved.</span><br /><br />
+          <span>© 2006 – 2017 Liam Richardson. All rights reserved.</span><br /><br />
           Design by <a href="https://twitter.com/field_street" title="Richard Windsor">Richard Windsor</a>. Social Icons by <a href="http://iconmonstr.com/">IconMonstr</a>.
         </p>
       </footer>
